--- a/src/app/publicaciones/publicaciones.component.html
+++ b/src/app/publicaciones/publicaciones.component.html
@@ -1,8 +1,8 @@
 <ion-grid>
   <ion-row>
     <ion-col *ngFor="let publicacion of publicacionesPorUsuario" size="4">
-      <a [routerLink]="['/tabs/publicacion', publicacion.id]">
-        <img src="{{publicacion.imagen}}" alt="{{publicacion.id}}">
+      <a [routerLink]="['/tabs/p']" [queryParams]="{p: publicacion.key}">
+        <img src="{{publicacion.imagenPost}}" alt="{{publicacion.id}}">
       </a>
     </ion-col>
   </ion-row>
