--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -5,12 +5,14 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
+
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
   </ion-header>
+
   <ion-grid>
     <ion-row *ngFor="let publicacion of publicaciones">
       <ion-col size="12">
@@ -19,13 +21,18 @@
           <ion-card-header>
             <ion-grid>
               <img src="../../assets/images/avatar.jpg" alt="" height="23px">
-              
+              {{publicacion.usuario}}
+
+              {{publicacion.key}}
             </ion-grid>
           </ion-card-header>
           <ion-card-content>
-
-           <a [routerLink]="['/tabs/publicacion', publicacion.id]"> <img src="{{publicacion.imagenPost}}" alt=""></a>
-
+            
+            
+           <a [routerLink]="['/tabs/p']" [queryParams] ="{publicacionId: publicacion.key}"> <img src="{{publicacion.urlFoto}}" alt=""></a>
+            <p>
+              {{publicacion.caption}}
+            </p>
             <div class="opciones">
               <ion-col size="12">
                 <ion-icon name="paper-plane-outline" class="option"></ion-icon>
