--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      {{usuario}}
+      {{nombre}}
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -42,12 +42,12 @@
     <ion-row class="descripcion">
       <ion-col>
         <ion-label class="nombre">
-          {{nombre}}
+         <strong> {{nombre}}</strong>
         </ion-label>
         <ion-label>
-          {{descripcion}}
+          <br>{{bio}}
           <br>
-          <a href="#">Link</a>
+         
         </ion-label>
 
         <ion-grid>
