--- a/src/app/publicacion/publicacion.component.html
+++ b/src/app/publicacion/publicacion.component.html
@@ -6,25 +6,27 @@
   </ion-toolbar>
 </ion-header>
 
-
-<ion-card>
-  <ion-card-header>
-    <ion-grid>
-      <ion-row>
-        <ion-column size="2">
-          <img src="{{detallePublicacion.avatarUsuario}}" alt="" height="20px">
-        </ion-column>
-        <ion-column size="9">
-        
-        </ion-column>
-        <ion-column size="1">
-
-        </ion-column>
-      </ion-row>
-    </ion-grid>
-  </ion-card-header>
-  <ion-card-content>
-    <p></p>
-    <img src="{{detallePublicacion.imagenPost}}" alt=""> 
-  </ion-card-content>
-</ion-card>
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-grid>
+        <ion-row>
+          <ion-column size="2">
+            {{usuario}}
+            <!--<img src="{{detallePublicacion.avatarUsuario}}" alt="" height="20px">-->
+          </ion-column>
+          <ion-column size="9">
+          
+          </ion-column>
+          <ion-column size="1">
+  
+          </ion-column>
+        </ion-row>
+      </ion-grid>
+    </ion-card-header>
+    <ion-card-content>
+      <p>{{descripcionPost}}</p>
+      <img src="{{urlImagen}}" alt=""> 
+    </ion-card-content>
+  </ion-card>
+</ion-content>
